--- a/index.html
+++ b/index.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <title>Mi página web</title>
+  <meta charset="UTF-8">
+  <title>Formulario conectado a Google Sheets</title>
 </head>
 <body>
-  <h1>¡Hola, GitHub Pages!</h1>
+
+  <h2>Formulario</h2>
+
+  <input id="nombre" placeholder="Tu nombre"><br><br>
+  <textarea id="mensaje" placeholder="Escribe algo..."></textarea><br><br>
+  <button onclick="enviar()">Enviar</button>
+
+  <script>
+    function enviar() {
+      const nombre = document.getElementById("nombre").value.trim();
+      const mensaje = document.getElementById("mensaje").value.trim();
+
+      if (!nombre || !mensaje) {
+        alert("Por favor, llena ambos campos.");
+        return;
+      }
+
+      fetch("https://script.google.com/macros/s/AKfycbweg1g6hGUM2THVu39xQDwsRCW6cfLtiL38StJ3mBbzDUTYj_oWKyriiO0KRMdQRaw_Lg/exec", {
+        method: "POST",
+        body: JSON.stringify({ nombre, mensaje }),
+        headers: { "Content-Type": "application/json" }
+      })
+      .then(res => {
+        if (res.ok) {
+          alert("✅ ¡Enviado con éxito!");
+          document.getElementById("nombre").value = "";
+          document.getElementById("mensaje").value = "";
+        } else {
+          alert("❌ Falló el envío. Inténtalo de nuevo.");
+        }
+      })
+      .catch(error => {
+        alert("🚫 Error de red al enviar.");
+        console.error("Error:", error);
+      });
+    }
+  </script>
+
 </body>
 </html>
