--- a/index.html
+++ b/index.html
@@ -22,18 +22,17 @@
         return;
       }
 
-      fetch("https://script.google.com/macros/s/AKfycbweg1g6hGUM2THVu39xQDwsRCW6cfLtiL38StJ3mBbzDUTYj_oWKyriiO0KRMdQRaw_Lg/exec", {
-        method: "POST",
-        body: JSON.stringify({ nombre, mensaje }),
-        headers: { "Content-Type": "application/json" }
-      })
-      .then(res => {
-        if (res.ok) {
-          alert("✅ ¡Enviado con éxito!");
-          document.getElementById("nombre").value = "";
-          document.getElementById("mensaje").value = "";
-        } else {
-          alert("❌ Falló el envío. Inténtalo de nuevo.");
+      fetch("https://script.google.com/macros/s/AKfycbykQtMHWrBLB9xxJwI9hndwTDgaKsGjHRhDZ-jby0ofWUFijy6T37HE5TUUq_m_HDVGWQ/exec", {
+  method: "POST",
+  body: JSON.stringify({ nombre, mensaje }),
+  headers: { "Content-Type": "application/json" }
+})
+.then(r => r.json())
+.then(data => {
+  if(data.result === "success") alert("¡Enviado con éxito!");
+  else alert("Error: " + data.error);
+})
+.catch(e => alert("Error de red al enviar."));
         }
       })
       .catch(error => {
