--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Formulario conectado a Google Sheets</title>
 </head>
 <body>
-
   <h2>Formulario</h2>
 
-  <input id="nombre" placeholder="Tu nombre"><br><br>
-  <textarea id="mensaje" placeholder="Escribe algo..."></textarea><br><br>
+  <input id="nombre" placeholder="Tu nombre" /><br /><br />
+  <textarea id="mensaje" placeholder="Escribe algo..."></textarea><br /><br />
   <button onclick="enviar()">Enviar</button>
 
   <script>
@@ -22,22 +21,29 @@
         return;
       }
 
+      const formData = new URLSearchParams();
+      formData.append("nombre", nombre);
+      formData.append("mensaje", mensaje);
+
       fetch("https://script.google.com/macros/s/AKfycbyXqc2Z2H1-QUUam48NwA0cFNjXqlwnKXS1j-Xmwaa1sMHi9eh-3mfjo9xuxrolZRfhIA/exec", {
         method: "POST",
-        body: JSON.stringify({ nombre, mensaje }),
-        headers: { "Content-Type": "application/json" }
+        body: formData,
+        headers: {
+          "Content-Type": "application/x-www-form-urlencoded",
+        },
       })
-      .then(r => r.json())
-      .then(data => {
-        if(data.result === "success") alert("¡Enviado con éxito!");
-        else alert("Error: " + data.error);
-      })
-      .catch(e => {
-        alert("Error de red al enviar.");
-        console.error(e);
-      });
+        .then((r) => r.text())
+        .then((text) => {
+          const data = JSON.parse(text);
+          if (data.result === "success") alert("¡Enviado con éxito!");
+          else alert("Error: " + data.error);
+        })
+        .catch((e) => {
+          alert("Error de red al enviar.");
+          console.error(e);
+        });
     }
   </script>
-
 </body>
 </html>
+
