--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Formulario conectado a Google Sheets</title>
 </head>
 <body>
-
   <h2>Formulario</h2>
 
   <input id="nombre" placeholder="Tu nombre" /><br /><br />
@@ -22,28 +21,26 @@
         return;
       }
 
+      // Construir datos tipo application/x-www-form-urlencoded
+      const data = new URLSearchParams();
+      data.append("nombre", nombre);
+      data.append("mensaje", mensaje);
+
       fetch("https://script.google.com/macros/s/AKfycbyXqc2Z2H1-QUUam48NwA0cFNjXqlwnKXS1j-Xmwaa1sMHi9eh-3mfjo9xuxrolZRfhIA/exec", {
         method: "POST",
-        body: JSON.stringify({ nombre, mensaje }),
-        headers: { "Content-Type": "application/json" }
+        body: data,
+        headers: { "Content-Type": "application/x-www-form-urlencoded" }
       })
-      .then(response => response.json())
-      .then(data => {
-        if (data.result === "success") {
-          alert("¡Enviado con éxito!");
-          // Opcional: limpiar formulario
-          document.getElementById("nombre").value = "";
-          document.getElementById("mensaje").value = "";
-        } else {
-          alert("Error: " + data.error);
-        }
-      })
-      .catch(error => {
-        alert("Error de red al enviar.");
-        console.error("Fetch error:", error);
-      });
+        .then(response => response.json())
+        .then(data => {
+          if (data.result === "success") alert("¡Enviado con éxito!");
+          else alert("Error: " + data.error);
+        })
+        .catch(e => {
+          alert("Error de red al enviar.");
+          console.error(e);
+        });
     }
   </script>
-
 </body>
 </html>
