Actualización del HTML con cambios del formulario

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <textarea id="mensaje" placeholder="Escribe algo..."></textarea><br /><br />
   <button onclick="enviar()">Enviar</button>
 
-  <<script>
+  <script>
   function enviar() {
     const nombre = document.getElementById("nombre").value.trim();
     const mensaje = document.getElementById("mensaje").value.trim();
