Actualización del HTML con cambios del formulario

--- a/index.html
+++ b/index.html
@@ -12,36 +12,40 @@
   <button onclick="enviar()">Enviar</button>
 
   <script>
-  function enviar() {
-    const nombre = document.getElementById("nombre").value.trim();
-    const mensaje = document.getElementById("mensaje").value.trim();
+    function enviar() {
+      const nombre = document.getElementById("nombre").value.trim();
+      const mensaje = document.getElementById("mensaje").value.trim();
 
-    if (!nombre || !mensaje) {
-      alert("Por favor, llena ambos campos.");
-      return;
-    }
-
-    fetch("https://script.google.com/macros/s/AKfycbxakz6MZ3XQt9vukq51QbZTqkF7kQYOPFPU7K0lFaL5kDSz_vHXPIufkFKe4ihSuYrb4A/exec", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"  // 👈 Muy importante
-      },
-      body: JSON.stringify({ nombre, mensaje })  // 👈 También
-    })
-    .then(r => r.json())
-    .then(data => {
-      if (data.result === "success") {
-        alert("¡Enviado con éxito!");
-      } else {
-        alert("Error: " + data.error);
+      if (!nombre || !mensaje) {
+        alert("Por favor, llena ambos campos.");
+        return;
       }
-    })
-    .catch(e => {
-      alert("🚫 Error de red al enviar.");
-      console.error("Fetch error:", e);
-    });
-  }
-</script>
 
+      // Formato x-www-form-urlencoded para evitar problemas CORS
+      const datos = `nombre=${encodeURIComponent(nombre)}&mensaje=${encodeURIComponent(mensaje)}`;
+
+      fetch("https://script.google.com/macros/s/AKfycbxakz6MZ3XQt9vukq51QbZTqkF7kQYOPFPU7K0lFaL5kDSz_vHXPIufkFKe4ihSuYrb4A/exec", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/x-www-form-urlencoded"
+        },
+        body: datos
+      })
+      .then(response => response.json())
+      .then(data => {
+        if (data.result === "success") {
+          alert("¡Enviado con éxito!");
+          document.getElementById("nombre").value = "";
+          document.getElementById("mensaje").value = "";
+        } else {
+          alert("Error: " + data.error);
+        }
+      })
+      .catch(e => {
+        alert("🚫 Error de red al enviar.");
+        console.error("Fetch error:", e);
+      });
+    }
+  </script>
 </body>
 </html>
