--- a/index.html
+++ b/index.html
@@ -7,45 +7,18 @@
 <body>
   <h2>Formulario</h2>
 
-  <input id="nombre" placeholder="Tu nombre" /><br /><br />
-  <textarea id="mensaje" placeholder="Escribe algo..."></textarea><br /><br />
-  <button onclick="enviar()">Enviar</button>
+  <form 
+    action="https://script.google.com/macros/s/AKfycbxakz6MZ3XQt9vukq51QbZTqkF7kQYOPFPU7K0lFaL5kDSz_vHXPIufkFKe4ihSuYrb4A/exec" 
+    method="POST" 
+    target="hidden_iframe" 
+    onsubmit="alert('¡Formulario enviado con éxito!');"
+  >
+    <input name="nombre" placeholder="Tu nombre" required /><br /><br />
+    <textarea name="mensaje" placeholder="Escribe algo..." required></textarea><br /><br />
+    <button type="submit">Enviar</button>
+  </form>
 
-  <script>
-    function enviar() {
-      const nombre = document.getElementById("nombre").value.trim();
-      const mensaje = document.getElementById("mensaje").value.trim();
-
-      if (!nombre || !mensaje) {
-        alert("Por favor, llena ambos campos.");
-        return;
-      }
-
-      // Formato x-www-form-urlencoded para evitar problemas CORS
-      const datos = `nombre=${encodeURIComponent(nombre)}&mensaje=${encodeURIComponent(mensaje)}`;
-
-      fetch("https://script.google.com/macros/s/AKfycbxakz6MZ3XQt9vukq51QbZTqkF7kQYOPFPU7K0lFaL5kDSz_vHXPIufkFKe4ihSuYrb4A/exec", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/x-www-form-urlencoded"
-        },
-        body: datos
-      })
-      .then(response => response.json())
-      .then(data => {
-        if (data.result === "success") {
-          alert("¡Enviado con éxito!");
-          document.getElementById("nombre").value = "";
-          document.getElementById("mensaje").value = "";
-        } else {
-          alert("Error: " + data.error);
-        }
-      })
-      .catch(e => {
-        alert("🚫 Error de red al enviar.");
-        console.error("Fetch error:", e);
-      });
-    }
-  </script>
+  <!-- iframe oculto para que el formulario no recargue la página -->
+  <iframe name="hidden_iframe" style="display:none;"></iframe>
 </body>
 </html>
